fixes spacing issue in Country.js

--- a/src/country.css
+++ b/src/country.css
@@ -107,6 +107,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         margin-top: 0;
+        gap: 1.2em;
     }
 
     .country article .country-details .country-stuff .country {
